force-app/main/default/objects/Group_Ticket_Refund_Order__c/Group_Ticket_Refund_Order__c.object-meta.xml
<CustomObject>
    <label>Group Ticket Refund Order</label>
    <nameField>
        <displayFormat>RO-{YYYY}{MM}{DD}{0000}</displayFormat>
        <label>Refund Order</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Group Ticket Refund Order</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>