force-app/main/default/objects/Group_Ticket_Refund_Order__c/fields/Accepted_Refund_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Refund_Tickets__c</fullName>
    <label>Accepted Refund Tickets</label>
    <summaryFilterItems>
        <field>Refund_Ticket_Number__c.Refund_Condition__c</field>
        <operation>equals</operation>
        <value>General Refund, Waive Refund Fee, Waive No Show Fee, Waive Refund Fee &amp; No Show Fee, Refund Tax Only, Refund Returning Tax Only, Full Refund, Others</value>
    </summaryFilterItems>
    <summaryForeignKey>Refund_Ticket_Number__c.Refund_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>