force-app/main/default/objects/Group_Ticket_Refund_Order__c/fields/Applicant_Number__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Number__c</fullName>
    <label>Applicant Number</label>
    <type>TextArea</type>
</CustomField>