force-app/main/default/objects/Group_Ticket_Refund_Order__c/fields/Bank_Trans_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Bank_Trans_Remarks__c</fullName>
    <label>Bank Trans. Remarks</label>
    <type>TextArea</type>
</CustomField>