force-app/main/default/objects/Group_Ticket_Refund_Order__c/fields/BPM_No__c.field-meta.xml
<CustomField>
    <fullName>BPM_No__c</fullName>
    <label>BPM No.</label>
    <type>TextArea</type>
</CustomField>