force-app/main/default/objects/Group_Ticket_Refund_Order__c/fields/BPM_Vendor_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>BPM_Vendor_Account_Name__c</fullName>
    <formula>Travel_Agency_Name__r.BPM_Vendor_Account_Name__c</formula>
    <label>BPM Vendor Account Name</label>
    <type>Text</type>
</CustomField>