force-app/main/default/objects/Group_Ticket_Refund_Order__c/fields/Call_Center_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Call_Center_Remarks__c</fullName>
    <label>Call Center Remarks</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>