force-app/main/default/objects/Group_Ticket_Refund_Order__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>一般費用 - General</fullName>
                <default>true</default>
                <label>一般費用 - General</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>