force-app/main/default/objects/Group_Ticket_Refund_Order__c/fields/Company_Code__c.field-meta.xml
<CustomField>
    <fullName>Company_Code__c</fullName>
    <label>Company Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>星宇航空股份有限公司 - STARLUX Airlines CO., LTD.</fullName>
                <default>true</default>
                <label>星宇航空股份有限公司 - STARLUX Airlines CO., LTD.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>