force-app/main/default/objects/Group_Ticket_Refund_Order__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Group Ticket Refund Order</relationshipLabel>
    <relationshipName>Group_Ticket_Refund_Order</relationshipName>
    <type>Lookup</type>
</CustomField>