force-app/main/default/objects/Group_Ticket_Refund_Order__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <label>Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>新台幣 - TWD</fullName>
                <default>true</default>
                <label>新台幣 - TWD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>