force-app/main/default/objects/Group_Ticket_Refund_Order__c/fields/Denied_Refund_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Denied_Refund_Tickets__c</fullName>
    <label>Denied Refund Tickets</label>
    <summaryFilterItems>
        <field>Refund_Ticket_Number__c.Refund_Condition__c</field>
        <operation>equals</operation>
        <value>Denied</value>
    </summaryFilterItems>
    <summaryForeignKey>Refund_Ticket_Number__c.Refund_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>