force-app/main/default/objects/Group_Ticket_Refund_Order__c/fields/Describe_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Describe_Purpose__c</fullName>
    <label>Describe Purpose</label>
    <type>TextArea</type>
</CustomField>