force-app/main/default/objects/Group_Ticket_Refund_Order__c/fields/Expected_Refund_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Refund_Date__c</fullName>
    <label>Expected Refund Date</label>
    <type>Date</type>
</CustomField>