force-app/main/default/objects/Group_Ticket_Refund_Order__c/fields/Need_Approval_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Need_Approval_Tickets__c</fullName>
    <label>Need Approval Tickets</label>
    <summaryFilterItems>
        <field>Refund_Ticket_Number__c.Need_Approval__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Refund_Ticket_Number__c.Refund_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>