force-app/main/default/objects/Group_Ticket_Refund_Order__c/fields/Need_Approval_Tickets_Director__c.field-meta.xml
<CustomField>
    <fullName>Need_Approval_Tickets_Director__c</fullName>
    <label>Need Approval Tickets - Director</label>
    <summaryFilterItems>
        <field>Refund_Ticket_Number__c.Refund_Condition__c</field>
        <operation>equals</operation>
        <value>Waive Refund Fee &amp; No Show Fee, Full Refund, Others</value>
    </summaryFilterItems>
    <summaryForeignKey>Refund_Ticket_Number__c.Refund_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>