force-app/main/default/objects/Group_Ticket_Refund_Order__c/fields/Office_Site__c.field-meta.xml
<CustomField>
    <fullName>Office_Site__c</fullName>
    <formula>TEXT(Owner:User.Contact.Office_Site__c)</formula>
    <label>Office Site</label>
    <type>Text</type>
</CustomField>