force-app/main/default/objects/Group_Ticket_Refund_Order__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>國內電匯 - Wire transfer(Taiwan)</fullName>
                <default>true</default>
                <label>國內電匯 - Wire transfer(Taiwan)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>