force-app/main/default/objects/Group_Ticket_Refund_Order__c/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>月結60 - M60</fullName>
                <default>true</default>
                <label>月結60 - M60</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>