force-app/main/default/objects/Group_Ticket_Refund_Order__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Request for Refund</fullName>
            </value>
            <value>
                <fullName>Accepted and Refund in Progress</fullName>
            </value>
            <value>
                <fullName>1A Refunded</fullName>
            </value>
            <value>
                <fullName>Pending for Remittance</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>