force-app/main/default/objects/Group_Ticket_Refund_Order__c/fields/Total_Refund_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Refund_Amount__c</fullName>
    <label>Total Refund Amount</label>
    <summarizedField>Refund_Ticket_Number__c.Total_Refund_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Refund_Ticket_Number__c.Refund_Condition__c</field>
        <operation>equals</operation>
        <value>General Refund, Waive Refund Fee, Waive No Show Fee, Waive Refund Fee &amp; No Show Fee, Refund Tax Only, Refund Returning Tax Only, Full Refund, Others</value>
    </summaryFilterItems>
    <summaryForeignKey>Refund_Ticket_Number__c.Refund_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>