force-app/main/default/objects/Group_Ticket_Refund_Order__c/fields/Total_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Total_Tickets__c</fullName>
    <label>Total Tickets</label>
    <summaryForeignKey>Refund_Ticket_Number__c.Refund_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>