force-app/main/default/objects/Group_Ticket_Refund_Order__c/fields/Travel_Agency_Name__c.field-meta.xml
<CustomField>
    <fullName>Travel_Agency_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Travel Agency Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Group_Ticket_Refund</relationshipName>
    <type>Lookup</type>
</CustomField>