force-app/main/default/objects/Group_Ticket_Refund_Order__c/fields/Vendor_Group__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Group__c</fullName>
    <label>Vendor Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>供應商 - Vendor</fullName>
                <default>true</default>
                <label>供應商 - Vendor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>