force-app/main/default/objects/Group_Ticket_Refund_Order__c/fields/WHT_Type_Health_Insurance_Administra__c.field-meta.xml
<CustomField>
    <fullName>WHT_Type_Health_Insurance_Administra__c</fullName>
    <label>WHT Type - Health Insurance Administrati</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>不須扣繳 - Not Attract Withholding Tax</fullName>
                <default>true</default>
                <label>不須扣繳 - Not Attract Withholding Tax</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>