force-app/main/default/objects/Group_Ticket_Refund_Order__c/fields/X1A_Refunded_By__c.field-meta.xml
<CustomField>
    <fullName>X1A_Refunded_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>1A Refunded By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Group_Ticket_Refund_Order</relationshipName>
    <type>Lookup</type>
</CustomField>