force-app/main/default/objects/Group_Ticket_Refund_Order__c/fields/X1A_Refunded_Date__c.field-meta.xml
<CustomField>
    <fullName>X1A_Refunded_Date__c</fullName>
    <label>1A Refunded Date</label>
    <type>DateTime</type>
</CustomField>