force-app/main/default/objects/Group_Ticket_Refund_Order__c/validationRules/Need_Approve.validationRule-meta.xml
<ValidationRule>
    <fullName>Need_Approve</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Need_Approval_Tickets__c &gt; 0,
NOT(ISPICKVAL(Approval_Status__c, &quot;Approved&quot;) ),
ISPICKVAL( Status__c , &quot;Accepted and Refund in Progress&quot;) 
)</errorConditionFormula>
    <errorMessage>Need to get approval.</errorMessage>
</ValidationRule>