force-app/main/default/objects/Group_Ticket_Refund_Order__c/validationRules/Route_Can_Not_be_Changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Route_Can_Not_be_Changed</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(  Route__c  )</errorConditionFormula>
    <errorDisplayField>Route__c</errorDisplayField>
    <errorMessage>Can not change Route.</errorMessage>
</ValidationRule>