force-app/main/default/objects/Group_Ticket_Refund_Order__c/validationRules/Sales_Limitation_on_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Sales_Limitation_on_Status</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(
$Profile.Name = &quot;B2B Data Administrator&quot;,
$Profile.Name = &quot;B2B Sales Agent&quot;,
$Profile.Name = &quot;B2B Sales Director&quot;,
$Profile.Name = &quot;B2B Sales Manager&quot;),

NOT(ISPICKVAL(  Status__c  , &quot;New&quot;) ),
NOT(ISPICKVAL(  Status__c  , &quot;Request for Refund&quot;) ),
NOT(ISPICKVAL(  Status__c  , &quot;Accepted and Refund in Progress&quot;) ),
NOT(ISPICKVAL(  Status__c  , &quot;Canceled&quot;) )
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>You can not select this Status.</errorMessage>
</ValidationRule>