force-app/main/default/objects/Group_Ticket_Refund_Order__c/listViews/All_Refund_Order.listView-meta.xml
<ListView>
    <fullName>All_Refund_Order</fullName>
    <columns>NAME</columns>
    <columns>Travel_Agency_Name__c</columns>
    <columns>Route__c</columns>
    <columns>Status__c</columns>
    <columns>Total_Tickets__c</columns>
    <columns>Accepted_Refund_Tickets__c</columns>
    <columns>Denied_Refund_Tickets__c</columns>
    <columns>Total_Refund_Amount__c</columns>
    <columns>Expected_Refund_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Refund Order</label>
</ListView>